Endre formatet på /beregninger slik at vi faktisk kan sy data sammen mellom Arena og dp-sak
